--- a/TaxCalculator/Views/Home/Index.cshtml
+++ b/TaxCalculator/Views/Home/Index.cshtml
@@ -38,30 +38,15 @@
     <script>
         $(document).ready(function () {
             $('#calculateButton').click(function () {
-                toastr.options = {
-                    "closeButton": false,
-                    "debug": false,
-                    "newestOnTop": false,
-                    "progressBar": true,
-                    "positionClass": "toast-bottom-center",
-                    "preventDuplicates": true,
-                    "onclick": null,
-                    "showDuration": "300",
-                    "hideDuration": "1000",
-                    "timeOut": "5000",
-                    "extendedTimeOut": "1000",
-                    "showEasing": "swing",
-                    "hideEasing": "linear",
-                    "showMethod": "fadeIn",
-                    "hideMethod": "fadeOut"
-                }
+                var apiUrl = '@ViewBag.ApiUrl';
+
                 toastr["info"]("Wait a second...", "Income Tax Calclator");
 
                 var grossAnnualSalary = $('#grossAnnualSalary').val();
 
                 // Make the AJAX request to the Web API
                 $.ajax({
-                    url: '/api/salary/calculate',
+                    url: apiUrl + '/api/salary/calculate',
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify({ GrossAnnualSalary: grossAnnualSalary }),
