--- a/TaxCalculator/Views/_ViewImports.cshtml
+++ b/TaxCalculator/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TaxCalculator
-@using TaxCalculator.Models
+﻿@using TaxCalculator.Web
+@using TaxCalculator.WebApi.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
